k8s/dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vacancy-frontend
  namespace: vacancy-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vacancy-frontend
  template:
    metadata:
      labels:
        app: vacancy-frontend
    spec:
      containers:
        - name: frontend
          image: vacancy-frontend:latest
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
