k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vacancy-frontend
  namespace: vacancy-dev
spec:
  type: ClusterIP
  selector:
    app: vacancy-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
