k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacancy-ingress
  namespace: vacancy-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: vacancy.dev.local
    http:
      paths:
      - path: /(?P<path>.*)
        pathType: Prefix
        backend:
          service:
            name: vacancy-backend
            port:
              number: 8080
